# repo-control

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml
src/repo_control/: __main__.py  config.py  gh.py  git.py  ide.py  picker.py  selection.py  setup.py  state.py
src/repo_control/skill/: SKILL.md
tests/: conftest.py  test_git.py  test_picker.py  test_select_repos.py  test_selection.py  test_state.py  test_sync_stack.py
