[project]
name = "repo-control"
version = "0.1.0"
description = "Mirror open GitHub PRs as per-repo git worktree clusters"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
repo-control = "repo_control.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_control"]
